js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-import-source-assignment-expr-not-optional.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
import
.
source
(
)
;
}
